--- a/apiflow-backend/package.json
+++ b/apiflow-backend/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.7",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -19,9 +18,13 @@
     "express": "^4.19.2",
     "express-automatic-routes": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.3",
+    "picocolors": "^1.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/mongodb": "^4.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
@@ -30,6 +33,7 @@
     "@types/node": "^20.12.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
