--- a/apiflow-backend/package.json
+++ b/apiflow-backend/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
